--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "request": "~2.25.x",
     "forever-monitor": "~1.2.x",
     "redis": "~0.8.x",
-    "hiredis": "~0.1.15"
+    "hiredis": "~0.1.15",
+    "moment": "~2.1.0"
   }
 }
