--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "redis": "~0.8.x",
     "hiredis": "~0.1.x",
     "moment": "~2.1.x",
-    "strong-agent": "~0.2.x"
+    "strong-agent": "~0.2.x",
+    "stylus": "~0.36.1",
+    "ejs": "~0.8.4",
+    "nib": "~0.9.2",
+    "express-uglify": "~0.3.1",
+    "uglify-js-middleware": "~1.0.2",
+    "uglifyjs-middleware": "0.0.5"
   }
 }
