--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "forever-monitor": "~1.2.x",
     "redis": "~0.8.x",
     "hiredis": "~0.1.x",
-    "moment": "~2.1.x",
     "strong-agent": "~0.2.x",
-    "stylus": "~0.36.1",
     "ejs": "~0.8.4",
-    "nib": "~0.9.2",
-    "express-uglify": "~0.3.1",
-    "uglify-js-middleware": "~1.0.2",
-    "uglifyjs-middleware": "0.0.5"
+    "cron": "~1.0.1"
+  },
+  "devDependencies": {
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-stylus": "~0.7.0",
+    "grunt-contrib-watch": "~0.5.1",
+    "grunt": "~0.4.1"
   }
 }
