--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hiredis": "~0.1.x",
     "strong-agent": "~0.2.x",
     "ejs": "~0.8.4",
-    "cron": "~1.0.1"
+    "cron": "~1.0.1",
+    "moment": "~2.1.0"
   },
   "devDependencies": {
     "grunt-contrib-concat": "~0.3.0",
