--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
 	, "author": "Caio Ribeiro Pereira"
 	, "author_google_plus": "https://plus.google.com/106082169903180828657"
 	, "author_twitter": "crp_underground"
-	, "main_image": "/images/node-web-modules-icon128.png"
+	, "main_image": "/images/main.png"
+	, "logo_image": "/images/logo.png"
 	, "google_web_master": ""
 	, "google_analytics": ""
 }
