--- a/config.json
+++ b/config.json
@@ -6,6 +6,6 @@
 	, "author_twitter": "crp_underground"
 	, "main_image": "/images/main.png"
 	, "logo_image": "/images/logo.png"
-	, "google_web_master": ""
-	, "google_analytics": ""
+	, "google_web_master": "lu9VieZDw-NqM5jiuHwAKInllWa8gPNBoNUe1xDnDjE"
+	, "google_analytics": "UA-42921477-1"
 }
